New Tab Page: chrome-search://local-ntp/ files should not be cachable

Under chrome-search://local-ntp/, there is a file that can be modified
dynamically, e.g., config.js, and such a file should not be cachable
so that reload operations can load new data correctly.

This wasn't a problem before because Chrome's reload revalidates all
resources forcibly, but recent change made a normal reload revalidate
not all-resources, but only main resource.

BUG=668454

Review-Url: https://codereview.chromium.org/2533203002
Cr-Commit-Position: refs/heads/master@{#435166}

Former-commit-id: 501ba310da88bd1b84202f3f4c9b38cc5e6ea899