chrome/browser/search/local_ntp_source.h
@@ -27,6 +27,7 @@ class LocalNtpSource : public content::URLDataSource {
       const content::ResourceRequestInfo::WebContentsGetter& wc_getter,
       const content::URLDataSource::GotDataCallback& callback) override;
   std::string GetMimeType(const std::string& path) const override;
+  bool AllowCaching() const override;
   bool ShouldServiceRequest(const net::URLRequest* request) const override;
   std::string GetContentSecurityPolicyChildSrc() const override;
 
